# autonomous_driving_simulation_scenario_toolbox

./: .gitignore  .gitmodules  README.md  requirements.txt
module/coreframe/: main.py  test.py
module/coreframe/app/: app.py  env.py  ver.py
module/coreframe/app/base/: base_plugin.py  configs.py  plugins_manager.py  utils.py
module/coreframe/app/cv/: cv_reader.py
module/coreframe/app/plugins/: __init __.py  alignment.py  anti_shake.py  detect_and_track.py  track_obb.py
module/coreframe/data/conf/: sim.conf
tools/alignment/: CMakeLists.txt  README.md  gen_build_proj_debug.bat
tools/alignment/dll/src/: ORBextractor.cc  ORBextractor.h  main.cpp  match.cpp  sift.cpp  sift.h  work.cpp
tools/detect_and_track_plugin/: calc_homography_from_file.py  camera_worker.py  detect_utils.py  detection_worker.py  extractor_worker.py  tracking_worker.py
tools/detect_and_track_plugin/deep_sort_pytorch/deep_sort/: deep_sort.py
tools/detect_and_track_plugin/deep_sort_pytorch/deep_sort/deep/: feature_extractor.py
tools/detect_and_track_plugin/deep_sort_pytorch/deep_sort/sort/: detection.py  iou_matching.py  kalman_filter.py  linear_assignment.py  track.py  tracker.py
tools/shakeImage/dll/src/: main.cpp  match.h  matso.cpp  work.cpp  work.h
tools/shakeImage/test/: main.cpp
